ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libary-ingress
  namespace: libary-prod
spec:
  ingressClassName: nginx # ← Added here instead
  rules:
    - host: libary.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libary-service
                port:
                  number: 80
